@@ -60,6 +60,7 @@
 -------------------------------------------------------------------
 0.1.0:
 -Additional config file options
+-Fixed pagination bug
 -------------------------------------------------------------------
 
 
